--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.8",
     "mongoose-unique-validator": "^2.0.1",
     "mongoose-validator": "^2.1.0",
