--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "build-watch": "tsc --watch",
-    "start": "nodemon ./build/app.js"
+    "start": "cross-env NODE_ENV=development nodemon ./build/app.js",
+    "test": "cross-env NODE_ENV=test mocha ./build/test --exit"
   },
   "dependencies": {
     "@koa/cors": "^2.2.2",
@@ -30,11 +31,18 @@
     "@types/koa-bodyparser": "^5.0.1",
     "@types/koa-router": "^7.0.30",
     "@types/lodash": "^4.14.113",
+    "@types/mocha": "^5.2.5",
     "@types/mongoose": "^5.2.2",
     "@types/mongoose-unique-validator": "^1.0.1",
+    "@types/should": "^13.0.0",
     "@types/superagent": "^3.8.3",
+    "@types/supertest": "^2.0.5",
     "@types/validator": "^9.4.1",
+    "cross-env": "^5.2.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
+    "should": "^13.2.3",
+    "supertest": "^3.1.0",
     "typescript": "^3.0.1"
   }
 }
