--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "koa-router": "^7.4.0",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "mongoose": "^5.2.8",
     "mongoose-unique-validator": "^2.0.1",
     "mongoose-validator": "^2.1.0",
@@ -32,6 +33,7 @@
     "@types/koa-router": "^7.0.30",
     "@types/lodash": "^4.14.113",
     "@types/mocha": "^5.2.5",
+    "@types/moment-timezone": "^0.5.9",
     "@types/mongoose": "^5.2.2",
     "@types/mongoose-unique-validator": "^1.0.1",
     "@types/should": "^13.0.0",
