feat: 添加定时任务

--- a/src/config/index.ts.example
+++ b/src/config/index.ts.example
@@ -18,5 +18,7 @@ export const config: IConfig = merge({
   jwtExpires: '7d',
   pagination: {
     limit: 20
-  }
+  },
+  locale: 'zh-cn',
+  tz: 'Asia/Shanghai'
 }, require(`./${NODE_ENV}.js`).default);
