--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.2.8",
     "mongoose-unique-validator": "^2.0.1",
     "mongoose-validator": "^2.1.0",
+    "node-schedule": "^1.3.0",
     "superagent": "^3.8.3",
     "validator": "^10.4.0"
   },
@@ -36,6 +37,7 @@
     "@types/moment-timezone": "^0.5.9",
     "@types/mongoose": "^5.2.2",
     "@types/mongoose-unique-validator": "^1.0.1",
+    "@types/node-schedule": "^1.2.2",
     "@types/should": "^13.0.0",
     "@types/superagent": "^3.8.3",
     "@types/supertest": "^2.0.5",
